--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Barlow&display=swap");
 * {
-    margin: 0;
+  margin: 0;
 }
