Added background for each page

--- a/src/pages/destination/style.css
+++ b/src/pages/destination/style.css
@@ -1,3 +1,7 @@
 .destination-section {
-    color: blue;
+  background-image: url(./../../images/destination/background-destination-desktop.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  color: white;
 }
