--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,3 +3,18 @@
 * {
   margin: 0;
 }
+
+.bold {
+  font-weight: bold;
+}
+
+.container {
+  width: 75%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.number {
+  opacity: 0.25;
+}
