--- a/src/pages/destination/style.css
+++ b/src/pages/destination/style.css
@@ -6,19 +6,13 @@
   color: white;
 }
 
-.destination__title {
-  font-family: "Barlow Condensed", sans-serif;
-  font-size: 28px;
-  font-weight: normal;
-  text-transform: uppercase;
-  letter-spacing: 4.72px;
-  padding-top: 200px;
-  padding-left: 150px;
-  padding-bottom: 100px;
-}
-
 .info {
   width: 445px;
+  margin-top: 150px;
+}
+
+.planet__image {
+  margin-top: 150px;
 }
 
 .info__list {
@@ -58,14 +52,6 @@
   font-size: 100px;
   margin: 45px 0 14px;
   text-transform: uppercase;
-}
-
-.info__subtitle {
-  font-family: "Barlow", sans-serif;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 32px; 
-  color: #D0D6F9;
 }
 
 .info__line {
