--- a/src/pages/technology/style.css
+++ b/src/pages/technology/style.css
@@ -17,21 +17,25 @@
 }
 
 .technology__item {
+  font-family: "Bellefair", sans-serif;
+  font-size: 32px;
+  letter-spacing: 2px;
   display: block;
   width: 80px;
   height: 80px;
   margin-bottom: 40px;
   border-radius: 50px;
-  background-color: rgba(11, 13, 23, 0.8);
+  background-color: rgba(11, 11, 11, 0.8);
   color: white;
   transition-property: all;
   transition-duration: 0.2s;
   transition-timing-function: ease-in;
-  border: 1px solid rgb(80, 80, 80);
+  border: 1px solid rgb(40, 40, 40);
 }
 
 .technology__item:hover {
   background-color: white;
+  color: black;
   cursor: pointer;
 }
 
