--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,7 +25,7 @@
 }
 
 .container {
-  width: 75%;
+  width: 80%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -33,6 +33,7 @@
 
 .number {
   opacity: 0.25;
+  font-weight: bold;
 }
 
 .section__title {
@@ -60,6 +61,11 @@
     text-align: center;
     font-size: 16px;
     line-height: 28px;
+    margin: 0 auto;
+  }
+  
+  .section__title {
+    padding-top: 150px;
   }
 }
 
@@ -67,8 +73,16 @@
   .info__subtitle {
     font-size: 15px;
     line-height: 25px;
-    width: 300px;
+    width: 280px;
     margin: 0 auto;
+  }
+
+  .section__title {
+    padding-left: 0;
+    width: 220px;
+    margin: 0 auto;
+    font-size: 16px;
+    letter-spacing: 2.7px;
   }
 
   .container {
