--- a/src/pages/destination/style.css
+++ b/src/pages/destination/style.css
@@ -8,11 +8,12 @@
 
 .info {
   width: 445px;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 .planet__image {
-  margin-top: 150px;
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 .info__list {
@@ -153,5 +154,17 @@
 
   .subheading__distance {
     margin-bottom: 30px;
+  }
+}
+
+/* Adaptive height */
+@media (max-height: 750px) {
+  .planet__image {
+    margin-top: 100px;
+    margin-bottom: 150px;
+  }
+
+  .info {
+    margin-top: 50px;
   }
 }
