--- a/src/pages/technology/style.css
+++ b/src/pages/technology/style.css
@@ -191,3 +191,32 @@
     font-size: 15px;
   }
 }
+
+/* Adaptive height */
+@media (max-height: 750px) and (min-width: 1251px) {
+  .technology__img {
+    margin-top: 0;
+  }
+
+  .technology {
+    margin-top: 50px;
+  }
+}
+
+@media (max-height: 750px) and (max-width: 1250px) {
+  .technology-section {
+    height: 150vh;
+  }
+}
+
+@media (max-height: 750px) and (max-width: 650px) {
+  .technology-section {
+    height: 130vh;
+  }
+}
+
+@media (max-height: 780px) and (min-width: 1350px) {
+  .technology__img {
+    height: 400px;
+  }
+}
